--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
       "email": "r.roman1234@yandex.ru"
     }
   ],
-  "require": {}
+  "require-dev": {
+    "phpunit/phpunit": "^11.3"
+  },
+  "require": {
+    "ext-curl": "*"
+  }
 }
